aiops-platform/k8s/base/neo4j-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: neo4j
  namespace: aiops
spec:
  selector:
    app: neo4j
  ports:
  - name: http
    port: 7474
    targetPort: 7474
    protocol: TCP
  - name: bolt
    port: 7687
    targetPort: 7687
    protocol: TCP
  - name: https
    port: 7473
    targetPort: 7473
    protocol: TCP
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: neo4j-nodeport
  namespace: aiops
spec:
  selector:
    app: neo4j
  ports:
  - name: http
    port: 7474
    targetPort: 7474
    nodePort: 30747
    protocol: TCP
  - name: bolt
    port: 7687
    targetPort: 7687
    nodePort: 30687
    protocol: TCP
  type: NodePort
